# serde-dataclass

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: python-ci.yaml
docs/: api.md  custom-types.md  getting-started.md  index.md
docs/stylesheets/: extra.css
examples/: custom_types.py
src/serde_dataclass/: __init__.py  core.py  iface.py
src/toml_dataclass/: __init__.py  core.py
tests/: test_core.py  test_ds.py  test_lib.py
