[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "serde-dataclass"
version = "0.0.3"
description = "Convert dataclasses to TOML, preserving comments."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dacite>=1.8",
  "tomlkit>=0.12",
]
authors = [{ name = "Sunip K. Mukherjee <sunipkmukherjee@gmail.com>" }]
license = { text = "MIT" }
keywords = ["serde", "dataclass", "toml", "json"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0", 
  "numpy>=1.22", 
  "astropy>=5.0"
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
